--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		<div class="row">
 			<div class="col-12 col-md-6 portefolio">
 				<h1 class="titre"><span class="porte">Porte</span>folio</h1>
-				<p>Bienvenue sur mon portefolio !<br/>
+				<p><span class="textBienvenue">Bienvenue sur mon portefolio !</span><br/>
 				Vous y retrouverez mon profil et mes projets de formation en développement web</p>
 			</div>
 		</div>
@@ -51,19 +51,19 @@
 				<h1 id="ancre1">Qui suis-je ?</h1><hr/>
 			</div>
 		</div>
-		<div class="row">
+		<div class="row sectionPresentation">
 			<div class="col-12 col-lg-2"></div>
 			<div class="col-12 col-lg-4 presentation">
 				<!--présentation-->
-				<p class="prenom">Clarisse HURION</p>
-				<p class="plettrine"><span class="lettrine">J</span>e suis Clarisse, enchantée ! J'ai 22 ans et je suis actuellement en formation à Simplon pour pouvoir devenir développeuse web. Attirée depuis plusieurs années par le monde du numérique, je passe maintenant des heures entières à imaginer, maquetter et créer des sites web pour mener à bien tous les projets.</p>
+				<p class="prenom"><span class="clarisse">Clarisse</span> Hurion</p>
+				<p class="plettrine"><span class="lettrine">J</span>e suis <strong>Clarisse</strong>, enchantée ! J'ai 22 ans et je suis actuellement en formation à Simplon pour pouvoir devenir <strong>développeuse web</strong>. Attirée depuis plusieurs années par le monde du <strong>numérique</strong>, je passe maintenant des heures entières à <strong>imaginer</strong>, <strong>maquetter</strong> et <strong>créer des sites web</strong> pour mener à bien tous les <strong>projets</strong>.</p>
 			</div>
 			<div class="col-12 col-lg-1"></div>
 			<!--réseaux sociaux-->
 			<div class="col-12 col-lg-3 reseaux">
 				<p>Me contacter sur les réseaux sociaux</p>
-				<p><a href=""><img src="assets/img/rs/instagram.png" alt="instagram" class="rs"/></a>
-				<a href=""><img src="assets/img/rs/twitter.png" alt="twitter" class="rs"/></a></p>
+				<p><a href="https://www.instagram.com/lyrnaa" target="_blank"><img src="assets/img/rs/instagram.png" alt="instagram" class="rs"/></a>
+				<a href="https://twitter.com/lyrna2" target="_blank"><img src="assets/img/rs/twitter.png" alt="twitter" class="rs"/></a></p>
 			</div>
 			<div class="col-12 col-lg-2"></div>
 		</div>
@@ -446,11 +446,10 @@
 	</div>
 </div>
 </main>
-
 <footer id="ancre4">
 	 <hr/>
-  	<p>Vous pouvez <a href="assets/img/competence/CV.pdf" target="_blank">télécharger mon cv en pdf</a></p>
-  	<p>M'envoyer un <a href="mailto:clarisse.hurion@gmail.com" role="button">mail</a></p>
+	  	<p>Vous pouvez <a href="assets/img/competence/CV.pdf" target="_blank">télécharger mon cv en pdf</a></p>
+	  	<p>M'envoyer un <a href="mailto:clarisse.hurion@gmail.com" role="button">mail</a> à l'adresse clarisse.hurion@gmail.com</p>
  </footer>
 
 	
