--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
     </nav>
 </div>
-<img src="assets/img/fond/fond1.png" alt="fond" class="fond"/>
+<img src="assets/img/fond/fond.png" alt="fond" class="fond"/>
 <main>
 	<div class="container">
 		<div class="row">
@@ -140,7 +140,7 @@
 					                  	</div>
 					                  	<div class="modal-body">
 					                      <img src="assets/img/visuels/cv.png" alt="image" class="image" width="100%">
-					                      <h2>Curriculum vitae</h2>
+					                      <h2>CV en ligne</h2>
 					                    Mon premier projet correspond à la création d'un CV en ligne responsive, qui présente mon identité, mes compétences, mon expérience professionnelle, mes acquis et mes hobbies favoris.
 					                	</div>
 					                  	<div class="modal-footer">
@@ -450,6 +450,8 @@
 	 <hr/>
 	  	<p>Vous pouvez <a href="assets/img/competence/CV.pdf" target="_blank">télécharger mon cv en pdf</a></p>
 	  	<p>M'envoyer un <a href="mailto:clarisse.hurion@gmail.com" role="button">mail</a> à l'adresse clarisse.hurion@gmail.com</p>
+	  	<img src="assets/img/fond/footer.png" alt="imagefooter" class="imageFooter">
+
  </footer>
 
 	
