terminé - ajout des boutons dans les cartes et finitions responsive

--- a/index.html
+++ b/index.html
@@ -141,6 +141,11 @@
 					                  	<div class="modal-body">
 					                      <img src="assets/img/visuels/cv.png" alt="image" class="image" width="100%">
 					                      <h2>CV en ligne</h2>
+					                      <hr/>
+					                      	<div class="boutonLangage">
+						                      <p class="modalButton modalButtonHtml">HTML</p>
+						                      <p class="modalButton modalButtonCss">CSS</p>
+					                  		</div>
 					                    Mon premier projet correspond à la création d'un CV en ligne responsive, qui présente mon identité, mes compétences, mon expérience professionnelle, mes acquis et mes hobbies favoris.
 					                	</div>
 					                  	<div class="modal-footer">
@@ -177,6 +182,12 @@
 					                  	<div class="modal-body">
 					                      <img src="assets/img/visuels/escargot.png" alt="image" class="image" width="100%">
 					                      <h2>Jeu de l'escargot</h2>
+					                      <hr/>
+					                      	<div class="boutonLangage">
+						                      <p class="modalButton modalButtonHtml">HTML</p>
+						                      <p class="modalButton modalButtonCss">CSS</p>
+						                      <p class="modalButton modalButtonJs">JS</p>
+					                  		</div>
 					                    Il s'agit de reproduire le jeu de l'escargot en créant un plateau de jeu, des escargots et un système de déplacement des pions afin que les escargots puissent franchir la ligne d'arrivée, ce qui créé une alerte pop up qui indique l'escargot gagnant. 
 					                	</div>
 					                  	<div class="modal-footer">
@@ -213,6 +224,12 @@
 					                  	<div class="modal-body">
 					                      <img src="assets/img/visuels/espaceSecurise.png" alt="image" class="image" width="100%">
 					                      <h2>Espace sécurisé</h2>
+					                      <hr/>
+					                      	<div class="boutonLangage">
+						                      <p class="modalButton modalButtonHtml">HTML</p>
+						                      <p class="modalButton modalButtonCss">CSS</p>
+						                      <p class="modalButton modalButtonPhp">PHP</p>
+					                  		</div>
 					                    Le but de ce projet est de créer un formulaire qui permet de se login et se logout au site. Il a fallu créer une base de données, qui regroupe tous les noms d'utilisateurs et les mots de passe associés au compte. Le projet nécessitait ainsi de travailler du côté front-end (visuel du site) autant que du côté back-end (côté serveur).
 					                	</div>
 					                  	<div class="modal-footer">
@@ -249,10 +266,16 @@
 					                  	<div class="modal-body">
 					                      <img src="assets/img/visuels/escales.png" alt="image" class="image" width="100%">
 					                      <h2>Escales</h2>
+					                      <hr/>
+					                      	<div class="boutonLangage">
+						                      <p class="modalButton modalButtonHtml">HTML</p>
+						                      <p class="modalButton modalButtonCss">CSS</p>
+						                      <p class="modalButton modalButtonJs">JS</p>
+					                  		</div>
 					                    La conception d'un site vitrine sur les voyages s'est faite en groupe. Il a fallu créer un cahier des charges, une maquette wireframe puis celle mockup avant de commencer à coder. Le carousel défilant automatiquement montre toutes les destinations proposées par le site. Nous avons rajouté des onglets "qui sommes-nous ?", "promotions" et "contact" afin d'étayer le site. Les carrés en page accueil nous montre également la totalité des destinations que nous avons sélectionnées.
 					                	</div>
 					                  	<div class="modal-footer">
-					                    <em>Projet 5</em>
+					                    <em>Projet 4</em>
 					                    <button type="button" class="btn" data-dismiss="modal">Fermer</button>
 					                  </div>
 					                </div>
@@ -285,10 +308,16 @@
 					                  	<div class="modal-body">
 					                      <img src="assets/img/visuels/piccolino.png" alt="image" class="image" width="100%">
 					                      <h2>Piccolino</h2>
+					                      <hr/>
+					                      	<div class="boutonLangage">
+						                      <p class="modalButton modalButtonHtml">HTML</p>
+						                      <p class="modalButton modalButtonCss">CSS</p>
+						                      <p class="modalButton modalButtonJs">JS</p>
+					                  		</div>
 					                    Le projet est basé sur de l'imitation. Il faut partir d'une maquette fournie au départ et construire le visuel du site au plus proche. Piccolino est un site de musique, qui présente les créateurs du site, un carousel, une map, un formulaire de contact, notamment. Il a fallu fournir une maquette wireframe avant de commencer à coder afin de discerner les différentes parties du site plus facilement. Le site a du être conçu en utilisant bootstrap.
 					                	</div>
 					                  	<div class="modal-footer">
-					                    <em>Projet 4</em>
+					                    <em>Projet 5</em>
 					                    <button type="button" class="btn" data-dismiss="modal">Fermer</button>
 					                  </div>
 					                </div>
@@ -321,6 +350,11 @@
 					                  	<div class="modal-body">
 					                      <img src="assets/img/visuels/komenkonfe.png" alt="image" class="image" width="100%">
 					                      <h2>Visuels à reproduire</h2>
+					                      <hr/>
+					                      	<div class="boutonLangage">
+						                      <p class="modalButton modalButtonHtml">HTML</p>
+						                      <p class="modalButton modalButtonCss">CSS</p>
+					                  		</div>
 					                    En utilisant exclusivement du HTML et du CSS il a fallu reproduire les visuels présentés par le fichier PDF qui nous a été fourni. Sept visuels ont été à reproduire, avec des éléments très divers, visuels de fenêtre pop-up, de boutons, de carousel. Il a fallu fournir un travail de recherches pour réussir à trouver les fonts utilisées.
 					                	</div>
 					                  	<div class="modal-footer">
@@ -357,6 +391,12 @@
 					                  	<div class="modal-body">
 					                      <img src="assets/img/visuels/quote.png" alt="image" class="image" width="100%">
 					                      <h2>Générateur de citations aléatoires</h2>
+					                      <hr/>
+					                      	<div class="boutonLangage">
+						                      <p class="modalButton modalButtonHtml">HTML</p>
+						                      <p class="modalButton modalButtonCss">CSS</p>
+						                      <p class="modalButton modalButtonJs">JS</p>
+					                  		</div>
 					                    Les codes HTML et CSS étaient fournis. Le but est de continuer à coder le javascript qui avait été commencé pour arriver à générer dans la fenêtre prévue à cet effet une citation et le nom de l'auteur qui lui est associé, de manière totalement aléatoire. En parallèle, la couleur du bouton, du fond de l'écran et de certaines écritures devaient changer également de manière aléatoires. Les couleurs et les citations ont été réparties dans des arrays pour arriver au résultat désiré.
 					                	</div>
 					                  	<div class="modal-footer">
@@ -393,6 +433,11 @@
 					                  	<div class="modal-body">
 					                      <img src="assets/img/visuels/javascript.png" alt="image" class="image" width="100%">
 					                      <h2>Exercices DOM et javascript</h2>
+					                      <hr/>
+					                      	<div class="boutonLangage">
+						                      <p class="modalButton modalButtonHtml">HTML</p>
+						                      <p class="modalButton modalButtonJs">JS</p>
+					                  		</div>
 					                    Des exercices divers nous ont été fournis afin de nous entraîner à repérer les éléments divers parents, enfants(...) qui constituent une page web pour les afficher dans la console et leur apporter quelques modifications par la suite. C'est une première approche du javascript et du DOM, qui serviront plus tard à rendre les pages web dynamiques.
 					                	</div>
 					                  	<div class="modal-footer">
@@ -429,10 +474,16 @@
 					                  	<div class="modal-body">
 					                      <img src="assets/img/visuels/panierFrais.png" alt="image" class="image" width="100%">
 					                      <h2>Mon Panier Frais</h2>
+					                      <hr/>
+					                      	<div class="boutonLangage">
+						                      <p class="modalButton modalButtonHtml">HTML</p>
+						                      <p class="modalButton modalButtonCss">CSS</p>
+						                      <p class="modalButton modalButtonJs">JS</p>
+					                  		</div>
 					                    La création de ce site nous permet de mettre en application les exercices précédents sur le DOM et le javascript. Il était question de mettre en page des catégories de produits (légumes, fruits, confitures et boissons), proposés par Lise et Paul LARGE puis de créer à l'aide de javascript une gestion d'affichage par catégorie. Les boutons associés à chaque catégorie devaient afficher seulement la catégorie correspondante. Ainsi, en appuyant sur le bouton "légumes", nous avions seulement les légumes affichés, ainsi de suite. J'ai préféré utilisé bootstrap sur ce projet pour organiser mes éléments en cartes.
 					                	</div>
 					                  	<div class="modal-footer">
-					                    <em>Projet 5</em>
+					                    <em>Projet 9</em>
 					                    <button type="button" class="btn" data-dismiss="modal">Fermer</button>
 					                  </div>
 					                </div>
