fenêtre modales fluides

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 						<p class="card-text">Conception d'un curriculum vitae en ligne</p>
 						<!--bouton fenetre modale-->
 							<button type="button" data-toggle="modal" data-target="#cv" class="btn">Description</button>
-							<div class="modal" id="cv">
+							<div class="modal fade" id="cv">
 								<div class="modal-dialog">
 					                <div class="modal-content">
 					                	<div class="modal-header">
@@ -173,7 +173,7 @@
 						<p class="card-text">Conception du jeu des escargots </p>
 						<!--bouton fenetre modale-->
 							<button type="button" data-toggle="modal" data-target="#escargot" class="btn">Description</button>
-							<div class="modal" id="escargot">
+							<div class="modal fade" id="escargot">
 								<div class="modal-dialog">
 					                <div class="modal-content">
 					                	<div class="modal-header">
@@ -215,7 +215,7 @@
 							<p class="card-text">Conception d'un formulaire</p>
 							<!--bouton fenetre modale-->
 							<button type="button" data-toggle="modal" data-target="#espace" class="btn">Description</button>
-							<div class="modal" id="espace">
+							<div class="modal fade" id="espace">
 								<div class="modal-dialog">
 					                <div class="modal-content">
 					                	<div class="modal-header">
@@ -257,7 +257,7 @@
 							<p class="card-text">Conception d'un site vitrine</p>
 							<!--bouton fenetre modale-->
 							<button type="button" data-toggle="modal" data-target="#escales" class="btn">Description</button>
-							<div class="modal" id="escales">
+							<div class="modal fade" id="escales">
 								<div class="modal-dialog">
 					                <div class="modal-content">
 					                	<div class="modal-header">
@@ -299,7 +299,7 @@
 							<p class="card-text">Création d'un site vitrine</p>
 							<!--bouton fenetre modale-->
 							<button type="button" data-toggle="modal" data-target="#piccolino" class="btn">Description</button>
-							<div class="modal" id="piccolino">
+							<div class="modal fade" id="piccolino">
 								<div class="modal-dialog">
 					                <div class="modal-content">
 					                	<div class="modal-header">
@@ -341,7 +341,7 @@
 							<p class="card-text">Conception de visuels divers</p>
 							<!--bouton fenetre modale-->
 							<button type="button" data-toggle="modal" data-target="#komenkonfe" class="btn">Description</button>
-							<div class="modal" id="komenkonfe">
+							<div class="modal fade" id="komenkonfe">
 								<div class="modal-dialog">
 					                <div class="modal-content">
 					                	<div class="modal-header">
@@ -382,7 +382,7 @@
 						<p class="card-text">Conception d'un "Random Quote Generator"</p>
 						<!--bouton fenetre modale-->
 							<button type="button" data-toggle="modal" data-target="#quote" class="btn">Description</button>
-							<div class="modal" id="quote">
+							<div class="modal fade" id="quote">
 								<div class="modal-dialog">
 					                <div class="modal-content">
 					                	<div class="modal-header">
@@ -424,7 +424,7 @@
 						<p class="card-text">Exercices du DOM et JS</p>
 						<!--bouton fenetre modale-->
 							<button type="button" data-toggle="modal" data-target="#javascript" class="btn">Description</button>
-							<div class="modal" id="javascript">
+							<div class="modal fade" id="javascript">
 								<div class="modal-dialog">
 					                <div class="modal-content">
 					                	<div class="modal-header">
@@ -465,7 +465,7 @@
 						<p class="card-text">Conception d'un site vitrine</p>
 						<!--bouton fenetre modale-->
 							<button type="button" data-toggle="modal" data-target="#panier" class="btn">Description</button>
-							<div class="modal" id="panier">
+							<div class="modal fade" id="panier">
 								<div class="modal-dialog">
 					                <div class="modal-content">
 					                	<div class="modal-header">
